--- a/qml.qrc
+++ b/qml.qrc
@@ -3,6 +3,7 @@
         <file>main.qml</file>
         <file>FieldChess.qml</file>
         <file>FigureImageChess.qml</file>
+        <file>MainField.qml</file>
     </qresource>
     <qresource prefix="/image">
         <file>Img/black_pawn.png</file>
